--- a/GeometryTunes/ProjectList.xib
+++ b/GeometryTunes/ProjectList.xib
@@ -45,7 +45,6 @@
 						<string key="NSFrame">{{0, 83}, {768, 921}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="962661648">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -215,6 +214,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">editProjects</string>
+						<reference key="source" ref="183962876"/>
+						<reference key="destination" ref="841351856"/>
+					</object>
+					<int key="connectionID">17</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">newProject</string>
 						<reference key="source" ref="1015451727"/>
 						<reference key="destination" ref="841351856"/>
@@ -314,7 +321,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -322,10 +329,15 @@
 					<string key="className">ProjectList</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="editProjects">id</string>
 						<string key="newProject">id</string>
 						<string key="saveProject">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="editProjects">
+							<string key="name">editProjects</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="newProject">
 							<string key="name">newProject</string>
 							<string key="candidateClassName">id</string>
